Refactor `JatosUpdater`: after updating files, do not start JATOS again immediately (loader.sh will do this), instead return with exit code 46 ("update").